--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -165,7 +165,7 @@ header .masthead {
 
 /* Responsiveness */
 
-@media (min-width: 414px) and (max-width: 600px) {
+@media (max-width: 480px){
   .header {
     width: 100%;
     background-image: url("../img/wdigital.png");
