--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -183,7 +183,7 @@ header .masthead {
   }
 
   .content {
-    padding: 40px;
+    padding: 35px;
   }
 
   .title {
@@ -261,7 +261,7 @@ header .masthead {
   }
 }
 
-@media only screen and (min-width: 900px){
+@media only screen and (max-width: 900px){
   .header {
     width: 100%;
     background-image: url("../img/header2.png");
