--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -164,7 +164,7 @@ header .masthead {
 }
 
 /* Responsiveness */
-@media only screen and (min-width: 320px) and (max-width: 375px){
+@media only screen and (min-width: 320px) and (max-width: 410px){
   .header {
     width: 100%;
     background-image: url("../img/header2.png");
@@ -196,7 +196,7 @@ header .masthead {
   }
 }
 
-@media only screen and (min-width: 414px) and (max-width: 900px){
+@media only screen and (min-width: 411px) and (max-width: 900px){
   .header {
     width: 100%;
     background-image: url("../img/header2.png");
@@ -226,5 +226,9 @@ header .masthead {
 
   .card-text {
     font-size: 15px;
+  }
+
+  .image-position{
+    width: 100%;
   }
 }
