--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -21,6 +21,10 @@ h6 {
   font-weight: 400 !important;
 }
 
+.card-text {
+  color: black !important;
+}
+
 .header {
   height: 1000px;
   background-image: url("../img/header2.png");
@@ -72,8 +76,17 @@ header .masthead {
   padding: 50px 200px;
 }
 
-.card-img-top:hover {
+.card-img-top {
+  overflow: hidden;
   opacity: 0.5;
+  overflow: hidden;
+  transition: transform .5s ease;
+}
+
+.card-img-top:hover {
+  transform: scale(1.5);
+  opacity: 1;
+  height: 400px;
 }
 
 /* The Modal (background) */
@@ -135,6 +148,12 @@ header .masthead {
   padding-bottom: 50px;
 }
 
+.icons:hover {
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2); 
+}
+
 .fa {
   padding: 10px;
   font-size: 30px;
@@ -147,16 +166,25 @@ header .masthead {
 
 .fa:hover {
   opacity: 0.7;
+  text-decoration: none;
 }
 
 .fa-facebook {
-  background: #3B5998;
+  /* background: #3B5998; */
   color: white;
 }
 
+.fa-facebook:hover {
+  color: #3B5998;
+}
+
 .fa-twitter {
-  background: #55ACEE;
+  /* background: #55ACEE; */
   color: white;
+}
+
+.fa-twitter:hover {
+  color: #55ACEE;
 }
 
 .bg-footer {
@@ -167,7 +195,7 @@ header .masthead {
 @media only screen and (min-width: 320px) and (max-width: 410px){
   .header {
     width: 100%;
-    background-image: url("../img/header2.png");
+    background-image: url("../img/weedigital.png");
     background-size: contain;
   }
 
@@ -193,18 +221,18 @@ header .masthead {
   }
 
   .card-title {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .card-text {
-    font-size: 15px;
+    font-size: 18px;
   }
 }
 
 @media only screen and (min-width: 411px) and (max-width: 900px){
   .header {
     width: 100%;
-    background-image: url("../img/header2.png");
+    background-image: url("../img/weedigital.png");
     background-size: contain;
   }
 
@@ -231,11 +259,11 @@ header .masthead {
   }
 
   .card-title {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .card-text {
-    font-size: 15px;
+    font-size: 18px;
   }
 
   .image-position{
