--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -163,6 +163,7 @@ header .masthead {
   text-decoration: none;
   margin: 5px 2px;
   border-radius: 50%;
+  color: white;
 }
 
 .fa:hover {
@@ -170,22 +171,16 @@ header .masthead {
   text-decoration: none;
 }
 
-.fa-facebook {
-  /* background: #3B5998; */
-  color: white;
-}
-
 .fa-facebook:hover {
   color: #3B5998;
 }
 
-.fa-twitter {
-  /* background: #55ACEE; */
-  color: white;
-}
-
 .fa-twitter:hover {
   color: #55ACEE;
+}
+
+.fa-youtube-play:hover {
+  color: red;
 }
 
 .bg-footer {
